# vending-machine-haskell

./: README.rst  vending-machine-haskell.cabal
src/: MoneyStack.hs  VendingMachine.hs
test/: doctests.hs
