name:              vending-machine-haskell
version:           0.1.0
author:            pocketberserker
maintainer:        pocketberserker@gmail.com
build-type:        Simple
cabal-version:     >=1.8

library
  hs-source-dirs:  src
  ghc-options:     -Wall
  build-depends:   base,
                   mtl
  exposed-modules: VendingMachine

test-suite doctests
  type:            exitcode-stdio-1.0
  hs-source-dirs:  test
  main-is:         doctests.hs
  ghc-options:     -Wall -threaded
  build-depends:   base,
                   doctest >= 0.7
